--- a/index.html
+++ b/index.html
@@ -82,8 +82,13 @@
         </section>
 
         <section>
-            Well that is all I think of about myself, if you want to find out more about me, I am always open for a freindly realtionship.
-            <strong><em>THANK YOU FOR READING!</em></strong>
+            <p>
+                Well that is all I think of about myself, if you want to find out more about me, I am always open for a freindly realtionship.<br>
+                You can contact and follow me on my social media acounts and check out my artwork's time lapeses:
+                <a href = "https://www.facebook.com/joshua.ayran2">Facebook</a>
+                <a href = "https://www.instagram.com/jaayran/">Instagram</a>
+                <strong><em>THANK YOU FOR READING!</em></strong>
+            </p>
         </section>
     </main>
 </body>
